@@ -1,7 +1,35 @@
 <configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:five="http://namespaces.zope.org/five"
-    i18n_domain="Products.OrderableReferenceField">
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:five="http://namespaces.zope.org/five"
+  xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+  xmlns:i18n="http://namespaces.zope.org/i18n"
+  i18n_domain="Products.OrderableReferenceField">
 
+
+  <five:registerPackage package="." initialize=".initialize" />
+
+  <!-- Include configuration for dependencies listed in setup.py -->
+  <includeDependencies package="." />
+
+  <!-- register all skins-folders -->
+  <cmf:registerDirectory name="skins" directory="skins" recursive="True" />
+
+  <!-- register locales-directory -->
+ <!-- <i18n:registerTranslations directory="locales" /> -->
+
+  <!-- Register the installation GenericSetup extension profile -->
+  <genericsetup:registerProfile
+    name="default"
+    title="Products.OrderableReferenceField"
+    directory="profiles/default"
+    description="Orderable ReferenceField"
+    provides="Products.GenericSetup.interfaces.EXTENSION" />
+
+  <genericsetup:registerProfile
+    name="uninstall"
+    title="Products.OrderableReferenceField - uninstall"
+    directory="profiles/uninstall"
+    description="Orderable ReferenceField"
+    provides="Products.GenericSetup.interfaces.EXTENSION" />
 
 </configure>
